--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -122,9 +122,10 @@
     "googler_api_key_missing": "Ключ API отсутствует",
     "googler_usage_failed": "Не удалось получить данные",
     "gallery_tab_title": "Галерея",
-    "gallery_total_images_label": "Всего изображений: {count}",
-    "gallery_task_group_title": "{title} ({count} изображений)",
-    "gallery_language_group_title": "{title} ({count} изображений)",
+    "gallery_total_images_label": "Всего медиа: {count}",
+    "gallery_total_media_label": "Всего медиа: {count}",
+    "gallery_task_group_title": "{title} ({count} медиа)",
+    "gallery_language_group_title": "{title} ({count} медиа)",
     "confirm_image_deletion_message": "Вы уверены, что хотите навсегда удалить это изображение с диска?\n\n{}",
     "regenerate_image_title": "Перегенерировать изображение",
     "thumbnail_regen_button": "Перегенерировать",
