--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -122,9 +122,10 @@
     "googler_api_key_missing": "Ключ API відсутній",
     "googler_usage_failed": "Не вдалося отримати дані",
     "gallery_tab_title": "Галерея",
-    "gallery_total_images_label": "Всього зображень: {count}",
-    "gallery_task_group_title": "{title} ({count} зображень)",
-    "gallery_language_group_title": "{title} ({count} зображень)",
+    "gallery_total_images_label": "Всього медіа: {count}",
+    "gallery_total_media_label": "Всього медіа: {count}",
+    "gallery_task_group_title": "{title} ({count} медіа)",
+    "gallery_language_group_title": "{title} ({count} медіа)",
     "confirm_image_deletion_message": "Ви впевнені, що хочете назавжди видалити це зображення з диска?\n\n{}",
     "regenerate_image_title": "Перегенерувати зображення",
     "thumbnail_regen_button": "Перегенерувати",
