--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -122,7 +122,8 @@
     "googler_api_key_missing": "API key is missing",
     "googler_usage_failed": "Failed to get usage data",
     "gallery_tab_title": "Gallery",
-    "gallery_total_images_label": "Total images: {count}",
+    "gallery_total_images_label": "Total media: {count}",
+    "gallery_total_media_label": "Total media: {count}",
     "gallery_task_group_title": "{title} ({count} images)",
     "gallery_language_group_title": "{title} ({count} images)",
     "confirm_image_deletion_message": "Are you sure you want to permanently delete this image from your disk?\n\n{}",
