--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -232,5 +232,7 @@
     "confirm_apply_title": "Підтвердити застосування",
     "confirm_apply_template_text": "Ви впевнені, що хочете застосувати шаблон '{name}'? Це перезапише ваші поточні налаштування.",
     "prompts_count": "промптів",
-    "characters_count": "символів"
+    "characters_count": "символів",
+    "review_group_title": "Контроль",
+    "translation_review_label": "Контроль перекладу"
 }
