--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -248,5 +248,7 @@
     "daily_usage_chart_title": "Daily Usage",
     "date_axis_label": "Date",
     "count_axis_label": "Number of Stages",
-    "no_data_available": "No data available for the selected period."
+    "no_data_available": "No data available for the selected period.",
+    "subscription_expired_title": "Subscription Expired",
+    "subscription_expired_message": "Your subscription has expired. Please renew your subscription to continue using the application."
 }
