--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -250,5 +250,6 @@
     "count_axis_label": "Количество этапов",
     "no_data_available": "Нет данных за выбранный период.",
     "subscription_expired_title": "Срок подписки истек",
-    "subscription_expired_message": "Срок действия вашей подписки истек. Пожалуйста, продлите подписку, чтобы продолжить использование приложения."
+    "subscription_expired_message": "Срок действия вашей подписки истек. Пожалуйста, продлите подписку, чтобы продолжить использование приложения.",
+    "error_label": "Ошибка"
 }
