--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -250,5 +250,6 @@
     "count_axis_label": "Кількість етапів",
     "no_data_available": "Немає даних за вибраний період.",
     "subscription_expired_title": "Термін підписки закінчився",
-    "subscription_expired_message": "Термін дії вашої підписки закінчився. Будь ласка, поновіть підписку, щоб продовжити користуватися додатком."
+    "subscription_expired_message": "Термін дії вашої підписки закінчився. Будь ласка, поновіть підписку, щоб продовжити користуватися додатком.",
+    "error_label": "Помилка"
 }
