--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -11,9 +11,11 @@
     "subtitles_tab": "Subtitles",
     "templates_tab": "Templates",
     "openrouter_tab": "OpenRouter",
+    "assemblyai_tab": "AssemblyAI",
     "audio_tab": "Audio",
     "image_tab": "Image",
     "dataimpulse_tab": "DataImpulse",
+    "assemblyai_api_key": "AssemblyAI API Key:",
     "language_label": "Interface language:",
     "theme_label": "Theme:",
     "light_theme": "Light",
@@ -173,6 +175,7 @@
     "whisper_engine_group": "Whisper Engine",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
     "standard_python_radio": "Standard (Python)",
+    "assemblyai_radio": "AssemblyAI",
     "model_selection_group": "Model Selection",
     "model_label": "Model:",
     "subtitle_style_group": "Subtitle Style",
