--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -11,9 +11,11 @@
     "subtitles_tab": "Субтитры",
     "templates_tab": "Шаблоны",
     "openrouter_tab": "OpenRouter",
+    "assemblyai_tab": "AssemblyAI",
     "audio_tab": "Аудио",
     "image_tab": "Изображения",
     "dataimpulse_tab": "DataImpulse",
+    "assemblyai_api_key": "Ключ API AssemblyAI:",
     "language_label": "Язык интерфейса:",
     "theme_label": "Тема оформления:",
     "light_theme": "Светлая",
@@ -173,6 +175,7 @@
     "whisper_engine_group": "Движок Whisper",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
     "standard_python_radio": "Стандартный (Python)",
+    "assemblyai_radio": "AssemblyAI",
     "model_selection_group": "Выбор модели",
     "model_label": "Модель:",
     "subtitle_style_group": "Стиль субтитров",
