--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -11,9 +11,11 @@
     "subtitles_tab": "Субтитри",
     "templates_tab": "Шаблони",
     "openrouter_tab": "OpenRouter",
+    "assemblyai_tab": "AssemblyAI",
     "audio_tab": "Аудіо",
     "image_tab": "Зображення",
     "dataimpulse_tab": "DataImpulse",
+    "assemblyai_api_key": "Ключ API AssemblyAI:",
     "language_label": "Мова інтерфейсу:",
     "theme_label": "Тема оформлення:",
     "light_theme": "Світла",
@@ -173,6 +175,7 @@
     "whisper_engine_group": "Рушій Whisper",
     "amd_gpu_fork_radio": "AMD (GPU/Fork)",
     "standard_python_radio": "Стандартний (Python)",
+    "assemblyai_radio": "AssemblyAI",
     "model_selection_group": "Вибір моделі",
     "model_label": "Модель:",
     "subtitle_style_group": "Стиль субтитрів",
