--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -71,6 +71,7 @@
     "browse_button": "Browse...",
     "select_directory": "Select Folder",
     "image_review_label": "Image Review:",
+    "detailed_logging_label": "Detailed logging:",
     "queue_tab": "Queue",
     "add_to_queue": "Add to Queue",
     "enter_task_name_title": "Enter task name",
