--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -257,5 +257,8 @@
     "subscription_expired_message": "Your subscription has expired. Please renew your subscription to continue using the application.",
     "error_label": "Error",
     "accent_color_label": "Accent Color:",
-    "pick_accent_color": "Pick Accent Color"
+    "pick_accent_color": "Pick Accent Color",
+    "controls_group_title": "Control",
+    "image_prompt_count_check_label": "Image Prompt Count Control",
+    "image_prompt_count_label": "Number of prompts:"
 }
