--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -64,7 +64,7 @@
     "stage_generated_images": "Generated images",
     "stage_voiceover": "Voiceover",
     "stage_subtitles": "Subtitles",
-    "stage_montage": "Montage",
+    "stage_video": "Video",
     "select_all": "Select All",
     "deselect_all": "Deselect All ",
     "results_path_label": "Path to save results:",
@@ -243,15 +243,7 @@
     "original_chars": "Original: {count} chars",
     "translated_chars": "Translated: {count} chars",
     "statistics_tab": "Statistics",
-    "statistics_period_label": "Period:",
-    "all_time": "All time",
-    "current_month": "Current month",
-    "current_year": "Current year",
-    "statistics_stage_header": "Stage",
-    "statistics_count_header": "Count",
-    "daily_usage_chart_title": "Daily Usage",
     "date_axis_label": "Date",
-    "count_axis_label": "Number of Stages",
     "no_data_available": "No data available for the selected period.",
     "subscription_expired_title": "Subscription Expired",
     "subscription_expired_message": "Your subscription has expired. Please renew your subscription to continue using the application.",
@@ -270,5 +262,15 @@
     "audio_files_filter": "Audio Files (*.mp3 *.wav)",
     "add_background_music": "Add Music",
     "add_background_music_title": "Add Background Music",
-    "add_background_music_desc": "Select an audio file to use as background music, or drag and drop a file here."
+    "add_background_music_desc": "Select an audio file to use as background music, or drag and drop a file here.",
+    "videos_created_label": "Videos Created",
+    "video_count_axis_label": "Number of Videos",
+    "daily_video_chart_title": "Daily Video Creation",
+    "clear_statistics_title": "Clear Statistics",
+    "clear_statistics_confirm": "Are you sure you want to permanently delete all statistics? This action cannot be undone.",
+    "statistics_cleared_title": "Statistics Cleared",
+    "statistics_cleared_message": "All statistics have been successfully cleared.",
+    "statistics_title": "Statistics",
+    "clear_statistics_button": "Clear Statistics",
+    "total_videos_created": "Total Videos Created"
 }
