--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -64,7 +64,7 @@
     "stage_generated_images": "Сгенерированные изображения",
     "stage_voiceover": "Озвучка",
     "stage_subtitles": "Субтитры",
-    "stage_montage": "Монтаж",
+    "stage_video": "Видео",
     "select_all": "Выбрать все",
     "deselect_all": "Снять выбор ",
     "results_path_label": "Путь для сохранения результатов:",
@@ -243,15 +243,7 @@
     "original_chars": "Оригинал: {count} симв.",
     "translated_chars": "Перевод: {count} симв.",
     "statistics_tab": "Статистика",
-    "statistics_period_label": "Период:",
-    "all_time": "За все время",
-    "current_month": "За месяц",
-    "current_year": "За год",
-    "statistics_stage_header": "Этап",
-    "statistics_count_header": "Количество",
-    "daily_usage_chart_title": "Ежедневное использование",
     "date_axis_label": "Дата",
-    "count_axis_label": "Количество этапов",
     "no_data_available": "Нет данных за выбранный период.",
     "subscription_expired_title": "Срок подписки истек",
     "subscription_expired_message": "Срок действия вашей подписки истек. Пожалуйста, продлите подписку, чтобы продолжить использование приложения.",
@@ -270,5 +262,15 @@
     "audio_files_filter": "Аудиофайлы (*.mp3 *.wav)",
     "add_background_music": "Добавить музыку",
     "add_background_music_title": "Добавить фоновую музыку",
-    "add_background_music_desc": "Выберите аудиофайл для использования в качестве фоновой музыки или перетащите файл сюда."
+    "add_background_music_desc": "Выберите аудиофайл для использования в качестве фоновой музыки или перетащите файл сюда.",
+    "videos_created_label": "Создано видео",
+    "video_count_axis_label": "Количество видео",
+    "daily_video_chart_title": "Ежедневное создание видео",
+    "clear_statistics_title": "Очистить статистику",
+    "clear_statistics_confirm": "Вы уверены, что хотите навсегда удалить всю статистику? Это действие нельзя будет отменить.",
+    "statistics_cleared_title": "Статистика очищена",
+    "statistics_cleared_message": "Вся статистика была успешно очищена.",
+    "statistics_title": "Статистика",
+    "clear_statistics_button": "Очистить статистику",
+    "total_videos_created": "Всего создано видео"
 }
