--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -64,7 +64,7 @@
     "stage_generated_images": "Згенеровані картинки",
     "stage_voiceover": "Озвучка",
     "stage_subtitles": "Субтитри",
-    "stage_montage": "Монтаж",
+    "stage_video": "Відео",
     "select_all": "Вибрати все",
     "deselect_all": "Зняти вибір ",
     "results_path_label": "Шлях для збереження результатів:",
@@ -243,15 +243,7 @@
     "original_chars": "Оригінал: {count} симв.",
     "translated_chars": "Переклад: {count} симв.",
     "statistics_tab": "Статистика",
-    "statistics_period_label": "Період:",
-    "all_time": "За весь час",
-    "current_month": "За місяць",
-    "current_year": "За рік",
-    "statistics_stage_header": "Етап",
-    "statistics_count_header": "Кількість",
-    "daily_usage_chart_title": "Щоденне використання",
     "date_axis_label": "Дата",
-    "count_axis_label": "Кількість етапів",
     "no_data_available": "Немає даних за вибраний період.",
     "subscription_expired_title": "Термін підписки закінчився",
     "subscription_expired_message": "Термін дії вашої підписки закінчився. Будь ласка, поновіть підписку, щоб продовжити користуватися додатком.",
@@ -270,5 +262,15 @@
     "audio_files_filter": "Аудіофайли (*.mp3 *.wav)",
     "add_background_music": "Додати музику",
     "add_background_music_title": "Додати фонову музику",
-    "add_background_music_desc": "Виберіть аудіофайл для використання в якості фонової музики, або перетягніть файл сюди."
+    "add_background_music_desc": "Виберіть аудіофайл для використання в якості фонової музики, або перетягніть файл сюди.",
+    "videos_created_label": "Створено відео",
+    "video_count_axis_label": "Кількість відео",
+    "daily_video_chart_title": "Щоденне створення відео",
+    "clear_statistics_title": "Очистити статистику",
+    "clear_statistics_confirm": "Ви впевнені, що хочете назавжди видалити всю статистику? Цю дію неможливо буде скасувати.",
+    "statistics_cleared_title": "Статистику очищено",
+    "statistics_cleared_message": "Вся статистика була успішно очищена.",
+    "statistics_title": "Статистика",
+    "clear_statistics_button": "Очистити статистику",
+    "total_videos_created": "Всього створено відео"
 }
