--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -64,6 +64,7 @@
     "stage_generated_images": "Сгенерированные изображения",
     "stage_voiceover": "Озвучка",
     "stage_subtitles": "Субтитры",
+    "stage_montage": "Монтаж",
     "stage_video": "Видео",
     "select_all": "Выбрать все",
     "deselect_all": "Снять выбор ",
