--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -284,5 +284,13 @@
     "subscription_date_format_error": "Subscription date format error",
     "logout": "Logout",
     "logout_success_title": "Logout",
-    "logout_success_message": "You have been successfully logged out. The application will now restart."
+    "logout_success_message": "You have been successfully logged out. The application will now restart.",
+    "active_template_label": "Template",
+    "active_template_tooltip": "This template is applied to the global settings.",
+    "template_applied_title": "Template Applied",
+    "template_applied_message": "Template settings have been applied and saved.",
+    "apply_template_button": "Apply",
+    "view_template_button": "View",
+    "template_details_title": "Template Details",
+    "close_button": "Close"
 }
