--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -292,5 +292,7 @@
     "apply_template_button": "Apply",
     "view_template_button": "View",
     "template_details_title": "Template Details",
-    "close_button": "Close"
+    "close_button": "Close",
+    "default_template_label": "Default Template:",
+    "none_template": "None"
 }
