--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -292,5 +292,7 @@
     "apply_template_button": "Применить",
     "view_template_button": "Просмотр",
     "template_details_title": "Детали шаблона",
-    "close_button": "Закрыть"
+    "close_button": "Закрыть",
+    "default_template_label": "Шаблон по умолчанию:",
+    "none_template": "Нет"
 }
